--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Seokil Kang
+title: <span style="font-variant:small-caps;">Seokil Kang</span>
 logo: /profile.jpg
 
 theme: jekyll-theme-minimal
