--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: <span style="font-variant:small-caps;">Seokil Kang</span>
+title: <span style="font-variant:small-caps;"><font size="16">Seokil Kang</font></span>
 logo: /profile.jpg
 
 theme: jekyll-theme-minimal
