--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: <span style="font-variant:small-caps;"><font size="10">Seokil Kang</font></span>
 logo: /profile.jpg
 
-theme: jekyll-theme-minimal
+theme: jekyll-theme-Ephesus
 minimal_mistakes_skin: "air"
