--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,5 @@
-title: <span style="font-variant:small-caps;">Seokil Kang</span>
+#title: <span style="font-variant:small-caps;">Seokil Kang</span>
+title: Seokil Kang
 logo: /profile.jpg
 
 theme: jekyll-theme-Some
