--- a/_config.yml
+++ b/_config.yml
@@ -4,4 +4,4 @@ logo: /profile.jpg
 
 theme: jekyll-theme-Some
 minimal_mistakes_skin: "air"
-google_analytics: <Seokil Kang>
+#google_analytics: <Seokil Kang>
