--- a/_config.yml
+++ b/_config.yml
@@ -2,6 +2,6 @@
 title: Seokil Kang
 logo: /profile.jpg
 
-theme: jekyll-theme-Some
+theme: jekyll-theme-minimal
 minimal_mistakes_skin: "air"
 #google_analytics: <Seokil Kang>
