--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,4 @@
-#title: <span style="font-variant:small-caps;">Seokil Kang</span>
-title: Seokil Kang
+title: <span style="font-variant:small-caps;"><font size="5">Seokil Kang</font></span>
 logo: /profile.jpg
 
 theme: jekyll-theme-minimal
