--- a/_config.yml
+++ b/_config.yml
@@ -3,5 +3,5 @@ logo: /profile.jpg
 theme: jekyll-theme-minimal
 minimal_mistakes_skin: "air"
 author:
-  mail: sk86@iu.edu
+  mail: kangseokil@bok.or.kr
   github: seokil-kang
